refactor: pkg improvements and refactoring with optimization